--- a/_extensions/emctemplatereveal/emctemplatereveal.scss
+++ b/_extensions/emctemplatereveal/emctemplatereveal.scss
@@ -7,6 +7,8 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
 
+// for sticky notes
+@import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap');
 $font-family-sans-serif: "Montserrat", "Roboto", "Fira Sans", "Droid Serif", serif !default;
 $font-family-monospace: "JetBrains Mono", "Fira Code", monospace;
 $presentation-font-size-root: 32px;
@@ -32,14 +34,17 @@ $emclblue: #86d2ed;
 $emcmblue: #0078d1;
 $emcdbluevar: #00216d;
 $emclbluevar: #98DDF5;
-$emcdblue80: tint($emclblue, 80);
+$emclblue80: tint($emclblue, 80);
+$emcdblue80: tint($emcdblue, 80);
 $emcverylightblue: #cfedf8;
 $emcred: #DB3324;
 $emcpurple: #5C37B4;
 $emclila: #b281e2;
 $emcgreen: #008080;
 $emcaccent: #df4512;
+$emcaccent2: #afcc46;
 $emclightgrey: #faf9f9;
+$emcdarkgrey: #868686;
 $heading-color: #0c2074 !default;
 $toc-color: #0c2074 !default;
 // $link-color: #EB811B !default;
@@ -70,9 +75,7 @@ $link-color-hover: #6ca0e8;
 $selection-background-color: #98bdef;
 $selection-color: #fff;
 $img-title: "./www/eebuildingdbluescreensize.jpg";
-// $img-transition: url("https://raw.githubusercontent.com/pat-alt/quarto-tudelft/main/_extensions/tudelft/www/delft-transition.png");
-// $img-logo-rgb: url("https://raw.githubusercontent.com/pat-alt/quarto-tudelft/main/_extensions/tudelft/www/TUDelft_logo_rgb.png");
-// $img-logo-white: url("https://raw.githubusercontent.com/pat-alt/quarto-tudelft/main/_extensions/tudelft/www/TUDelft_logo_white.png");
+
 $logo-pos: 5% 102% !default;
 $logo-size: 10% !default;
 
@@ -276,7 +279,7 @@ h2::after.title {
 
 // inline
 .reveal code {
-	font-size: 70%;
+	font-size: 71%;
 	background-color: #afb8c133;
 	color: #000;
 	padding: 4px;
@@ -285,12 +288,12 @@ h2::after.title {
 
 // code blocks
 .reveal div.sourceCode pre code {
-	font-size: 105%;
+	font-size: 106%;
 }
 
 // code output
 .reveal pre code {
-	font-size: 105%;
+	font-size: 106%;
 	padding-top: 15px;
 }
 
@@ -422,6 +425,19 @@ ul,
 	margin-block-end: 0em;
 }
 
+.boxspw {
+	background-color: #7AC2EF;
+	border: medium solid #000000;
+	text-align: left;
+	padding: 6px;
+}
+
+.red-cross {
+      color: red;
+    }
+.green-checkmark {
+      color: greenyellow;
+    }
 /*
 * tables
 */
@@ -448,3 +464,168 @@ ul,
 	 color: white;
    }
    
+ .reveal .emcdescriptionlist {
+
+	dl {
+	 display: flex;
+	 flex-flow: row wrap;
+	 border: solid #333;
+	 border-width: 1px 1px 0 0;
+   }
+   dt {
+	 flex-basis: 20%;
+	 padding: 4px 1.25em;
+	 background: $emclblue;
+	 text-align: right;
+	 color: $emcdblue;
+   }
+   dd {
+	 flex-basis: 70%;
+	 flex-grow: 1;
+	 margin: 0;
+	 padding: 2px 4px;
+	 border-bottom: 1px solid #333;
+   }
+  dt::after {
+	content: ": ";
+  }
+  
+ 
+ }
+
+.wraparoundbottomright {
+	min-height: 10px;
+	height: 700px;
+	width: 1050px;
+	float: right;
+	bottom: 0;
+	clip-path: polygon(100% 10%, 25% 100%, 100% 100%);
+	shape-outside: polygon(100% 10%, 25%% 100%, 100% 100%);
+	-webkit-shape-outside: polygon(100% 10%, 25% 100%, 100% 100%);
+	-webkit-clip-path: polygon(100% 10%, 25% 100%, 100% 100%);
+	-moz-shape-outside: polygon(100% 10%, 25% 100%, 100% 100%);
+	-moz-clip-path: polygon(100% 10%, 25% 100%, 100% 100%);
+  }
+
+
+@supports (-webkit-clip-path: polygon(100% 10%, 25% 100%, 100% 100%)){
+.wraparoundbottomright {
+	min-height: 10px;
+	height: 700px;
+	width: 1050px;
+	float: right;
+	bottom: 0;
+	clip-path: polygon(100% 10%, 25% 100%, 100% 100%);
+	shape-outside: polygon(100% 10%, 25%% 100%, 100% 100%);
+	-webkit-shape-outside: polygon(100% 10%, 25% 100%, 100% 100%);
+	-webkit-clip-path: polygon(100% 10%, 25% 100%, 100% 100%);
+	-moz-shape-outside: polygon(100% 10%, 25% 100%, 100% 100%);
+	-moz-clip-path: polygon(100% 10%, 25% 100%, 100% 100%);
+  }
+
+  .wraparoundbottomright::before {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 100%;
+	visibility: hidden;
+  }
+}
+
+@-moz-document url-prefix(){
+	.wraparoundbottomright {
+		display: none;
+	  }
+ 
+}
+
+.center-xy {
+	margin: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-ms-transform: translateY(-50%), translateX(-50%);
+	transform: translateY(-50%), translateX(-50%);
+  }
+
+ // sticky notes
+
+ .stickynote {
+
+ body {
+	margin: 20px auto;
+	font-family: 'Montserrat';
+	background:#666;
+	color:#fff;
+  }
+  
+  *{
+	margin:0;
+	padding:0;
+  }
+  
+  h3 {
+	font-weight: bold;
+	font-size: 2rem;
+  }
+  p {
+	font-family: 'Reenie Beanie';
+	font-size: 2rem;
+  }
+  ul,li{
+	list-style:none;
+  }
+  ul{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+  }
+  ul li{
+	text-decoration:none;
+	color:#000;
+	background:#ffc;
+	display:block;
+	height:10em;
+	width:10em;
+	padding:1em;
+	box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+	transform: rotate(-6deg);
+	transition: transform .15s linear;
+  }
+  
+  ul li:nth-child(even){
+	transform:rotate(4deg);
+	position:relative;
+	top:5px;
+  }
+  ul li:nth-child(3n){
+	transform:rotate(-3deg);
+	position:relative;
+	top:-5px;
+  }
+  ul li:nth-child(5n){
+	transform:rotate(5deg);
+	position:relative;
+	top:-10px;
+  }
+  
+  ul li:hover,ul li:focus{
+	box-shadow:10px 10px 7px rgba(0,0,0,.7);
+	transform: scale(1.25);
+	position:relative;
+	z-index:5;
+  }
+  
+  ul li{
+	margin:1em;
+  }
+}
+
+.sad-smiley-slide {
+	background-image: url('https://upload.wikimedia.org/wikipedia/commons/8/8e/Lol_2.png'), url('https://upload.wikimedia.org/wikipedia/commons/8/8e/Lol_2.png');
+	background-size: cover, contain; /* Adjust sizes: "cover" for the main bg, "contain" for the smiley */
+	background-position: center, center; /* Center both images */
+	background-repeat: no-repeat, no-repeat; /* Prevent tiling */
+	background-blend-mode: normal, overlay; /* Optional: Add blending effects */
+	opacity: 0.5; /* Adjust overall transparency if needed */
+  }
